Closed Bug 259139 Opened 21 years ago Closed 20 years ago

[FIX]ASSERTION: Unknown request: 'aRequest == mCurrentRequest || aRequest == mPendingRequest'

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.8alpha4

People

(Reporter: Biesinger, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

trying to load http://www.mozilla.org/developer/, I get two assertions about an unknown request from nsImageLoadingContent. linux, gtk2+xft, recent CVS (sorry, not sure which date; current CVS still compiling) ###!!! ASSERTION: Unknown request: 'aRequest == mCurrentRequest || aRequest == mPendingRequest', file /home/chb/mozilla/content/base/src/nsImageLoadingContent.cpp, line 221 Break: at file /home/chb/mozilla/content/base/src/nsImageLoadingContent.cpp, line 221 ###!!! ASSERTION: Unknown request: 'aRequest == mCurrentRequest || aRequest == mPendingRequest', file /home/chb/mozilla/content/base/src/nsImageLoadingContent.cpp, line 221 Break: at file /home/chb/mozilla/content/base/src/nsImageLoadingContent.cpp, line 221 Document http://www.mozilla.org/developer/ loaded successfully
Further details- also happens in gtk1 #1 0x415e6bc8 in nsImageLoadingContent::OnStopDecode (this=0x88d9634, aRequest=0x88d9658, aStatus=5505024, aStatusArg=0x0) at /home/chb/mozilla/content/base/src/nsImageLoadingContent.cpp:220 (gdb) print *this $1 = {<nsIImageLoadingContent> = {<imgIDecoderObserver> = {<imgIContainerObserver> = {<nsISupports> = { _vptr.nsISupports = 0x419d7094}, <No data fields>}, <No data fields>}, <No data fields>}, mCurrentRequest = { mRawPtr = 0x0}, mPendingRequest = {mRawPtr = 0x0}, mCurrentURI = {mRawPtr = 0x0}, static sImgLoader = 0x821ba48, static sIOService = 0x81fe310, mObserverList = {mObserver = {mRawPtr = 0x0}, mNext = 0x0}, mLoadingEnabled = 1 '\001', mImageIsBlocked = 0 '\0', mHaveHadObserver = 0 '\0'} Note the null URIs The URI being loaded is http://www.mozilla.org/images/key-point_tl.gif (gdb) print *((imgRequestProxy*)aRequest)->mOwner $5 = {<imgILoad> = {<nsISupports> = { _vptr.nsISupports = 0x41a75828}, <No data fields>}, <imgIDecoderObserver> = {<imgIContainerObserver> = {<nsISupports> = { _vptr.nsISupports = 0x41a7587c}, <No data fields>}, <No data fields>}, <nsIStreamListener> = {<nsIRequestObserver> = {<nsISupports> = { _vptr.nsISupports = 0x41a758b0}, <No data fields>}, <No data fields>}, <nsSupportsWeakReference> = {<nsISupportsWeakReference> = {<nsISupports> = {_vptr.nsISupports = 0x41a758d0}, <No data fields>}, mProxy = 0x883cbe0}, mRefCnt = { mValue = 5}, _mOwningThread = {mThread = 0x8094548}, mChannel = {mRawPtr = 0x0}, mURI = {mRawPtr = 0x883c458}, mImage = {mRawPtr = 0x8860df8}, mDecoder = {mRawPtr = 0x0}, mObservers = {_vptr.nsVoidArray = 0x409609c8, mImpl = 0x8836a50}, mLoading = 0 '\0', mProcessing = 0 '\0', mImageStatus = 21, mState = 31, mContentType = {<nsCSubstring> = {<nsACString> = {mVTable = 0x808eb28, mData = 0x86e2148 "image/gif", mLength = 9, mFlags = 5}, <No data fields>}, <No data fields>}, mCacheEntry = {mRawPtr = 0x883a3e8}, mCacheId = 0x81d11e8, mLoadId = 0x87a15e0, mLoadTime = 1095109443812098, mValidator = 0x0, mIsMultiPartChannel = 0}
this still happens in: checkout finish: Mo Sep 13 17:56:21 CEST 2004 (i.e. 7 hours ago)
it does not actually seem related /developers, but to /start/. generated content is the problem. stack: (gdb) bt #0 nsDebug::Assertion (aStr=0x41c41e73 "Unknown request", aExpr=0x41c41e38 "aRequest == mCurrentRequest || aRequest == mPendingRequest", aFile=0x41c41d68 "/home/chb/mozilla/content/base/src/nsImageLoadingContent.cpp", aLine=221) at nsDebug.cpp:106 #1 0x418c67cc in nsImageLoadingContent::OnStopDecode (this=0x89a6eec, aRequest=0x89a6f10, aStatus=5505024, aStatusArg=0x0) at /home/chb/mozilla/content/base/src/nsImageLoadingContent.cpp:220 #2 0x41d287b5 in imgRequestProxy::OnStopDecode (this=0x89a6f10, status=5505024, statusArg=0x0) at /home/chb/mozilla/modules/libpr0n/src/imgRequestProxy.cpp:440 #3 0x41d23c37 in imgRequest::NotifyProxyListener (this=0x892ba50, proxy=0x89a6f10) at /home/chb/mozilla/modules/libpr0n/src/imgRequest.cpp:239 #4 0x41d28272 in imgRequestProxy::Clone (this=0x89a6280, aObserver=0x89a6eec, aClone=0x89a6ef0) at /home/chb/mozilla/modules/libpr0n/src/imgRequestProxy.cpp:346 #5 0x4183a577 in nsGenConImageContent::Init (this=0x89a6ec8, aImageRequest=0x89a6280) at /home/chb/mozilla/content/base/src/nsGenConImageContent.cpp:59 #6 0x41839ec0 in NS_NewGenConImageContent (aResult=0xbfffd070, aNodeInfo=0x89a6ea0, aImageRequest=0x89a6280) at /home/chb/mozilla/content/base/src/nsGenConImageContent.cpp:79 #7 0x41704aad in nsCSSFrameConstructor::CreateGeneratedFrameFor (this=0x8950480, aPresContext=0x893edc0, aDocument=0x893c968, aParentFrame=0x89a5284, aContent=0x89789b0, aStyleContext=0x89a52ec, aStyleContent=0x89a522c, aContentIndex=0, aFrame=0xbfffd0ec) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:1465 #8 0x41705817 in nsCSSFrameConstructor::CreateGeneratedContentFrame (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aFrame=0x89a4320, aContent=0x89789b0, aStyleContext=0x89a4274, aPseudoElement=0x80cdf60, aResult=0xbfffd254) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:1700 #9 0x4171be64 in nsCSSFrameConstructor::ProcessChildren (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x89789b0, aFrame=0x89a4320, aCanHaveGeneratedContent=1, aFrameItems=@0xbfffd2d0, aParentIsBlock=1, aTableCreator=0x0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:11535 #10 0x4171db04 in nsCSSFrameConstructor::ConstructBlock (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aDisplay=0x89a42a0, aContent=0x89789b0, aParentFrame=0x89a40c0, aContentParentFrame=0x0, aStyleContext=0x89a4274, aNewFrame=0x89a4320, aRelPos=0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:12598 #11 0x417100f6 in nsCSSFrameConstructor::ConstructFrameByDisplayType (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aDisplay=0x89a42a0, aContent=0x89789b0, aNameSpaceID=3, aTag=0x80ce6b8, aParentFrame=0x89a40c0, aStyleContext=0x89a4274, aFrameItems=@0xbfffd7a0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:6318 #12 0x4171285b in nsCSSFrameConstructor::ConstructFrameInternal (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x89789b0, aParentFrame=0x89a40c0, aTag=0x80ce6b8, aNameSpaceID=3, aStyleContext=0x89a4274, aFrameItems=@0xbfffd7a0, aXBLBaseTag=0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:7352 #13 0x417122b5 in nsCSSFrameConstructor::ConstructFrame (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x89789b0, aParentFrame=0x89a40c0, aFrameItems=@0xbfffd7a0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:7213 ---Type <return> to continue, or q <return> to quit--- #14 0x4171bf94 in nsCSSFrameConstructor::ProcessChildren (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x8978928, aFrame=0x89a40c0, aCanHaveGeneratedContent=1, aFrameItems=@0xbfffd7a0, aParentIsBlock=1, aTableCreator=0x0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:11558 #15 0x4171db04 in nsCSSFrameConstructor::ConstructBlock (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aDisplay=0x89a4040, aContent=0x8978928, aParentFrame=0x89a3ed8, aContentParentFrame=0x89a3ed8, aStyleContext=0x89a4014, aNewFrame=0x89a40c0, aRelPos=0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:12598 #16 0x4170ff1b in nsCSSFrameConstructor::ConstructFrameByDisplayType (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aDisplay=0x89a4040, aContent=0x8978928, aNameSpaceID=3, aTag=0x80ce1d0, aParentFrame=0x89a3ed8, aStyleContext=0x89a4014, aFrameItems=@0xbfffdc70) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:6274 #17 0x4171285b in nsCSSFrameConstructor::ConstructFrameInternal (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x8978928, aParentFrame=0x89a3ed8, aTag=0x80ce1d0, aNameSpaceID=3, aStyleContext=0x89a4014, aFrameItems=@0xbfffdc70, aXBLBaseTag=0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:7352 #18 0x417122b5 in nsCSSFrameConstructor::ConstructFrame (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x8978928, aParentFrame=0x89a3ed8, aFrameItems=@0xbfffdc70) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:7213 #19 0x4171bf94 in nsCSSFrameConstructor::ProcessChildren (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x89788b0, aFrame=0x89a3ed8, aCanHaveGeneratedContent=1, aFrameItems=@0xbfffdc70, aParentIsBlock=1, aTableCreator=0x0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:11558 #20 0x4171db04 in nsCSSFrameConstructor::ConstructBlock (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aDisplay=0x89a3e58, aContent=0x89788b0, aParentFrame=0x8996060, aContentParentFrame=0x0, aStyleContext=0x89a3e2c, aNewFrame=0x89a3ed8, aRelPos=0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:12598 #21 0x417100f6 in nsCSSFrameConstructor::ConstructFrameByDisplayType (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aDisplay=0x89a3e58, aContent=0x89788b0, aNameSpaceID=3, aTag=0x80ce1d0, aParentFrame=0x8996060, aStyleContext=0x89a3e2c, aFrameItems=@0xbfffe140) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:6318 #22 0x4171285b in nsCSSFrameConstructor::ConstructFrameInternal (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x89788b0, aParentFrame=0x8996060, aTag=0x80ce1d0, aNameSpaceID=3, aStyleContext=0x89a3e2c, aFrameItems=@0xbfffe140, aXBLBaseTag=0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:7352 #23 0x417122b5 in nsCSSFrameConstructor::ConstructFrame (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x89788b0, aParentFrame=0x8996060, aFrameItems=@0xbfffe140) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:7213 #24 0x4171bf94 in nsCSSFrameConstructor::ProcessChildren (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x8998720, aFrame=0x8996060, aCanHaveGeneratedContent=1, aFrameItems=@0xbfffe140, aParentIsBlock=1, aTableCreator=0x0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:11558 ---Type <return> to continue, or q <return> to quit--- #25 0x4171db04 in nsCSSFrameConstructor::ConstructBlock (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aDisplay=0x89512f0, aContent=0x8998720, aParentFrame=0x8995b50, aContentParentFrame=0x0, aStyleContext=0x8995b00, aNewFrame=0x8996060, aRelPos=0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:12598 #26 0x417100f6 in nsCSSFrameConstructor::ConstructFrameByDisplayType (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aDisplay=0x89512f0, aContent=0x8998720, aNameSpaceID=3, aTag=0x80ce1d0, aParentFrame=0x8995b50, aStyleContext=0x8995b00, aFrameItems=@0xbfffe5d0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:6318 #27 0x4171285b in nsCSSFrameConstructor::ConstructFrameInternal (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x8998720, aParentFrame=0x8995b50, aTag=0x80ce1d0, aNameSpaceID=3, aStyleContext=0x8995b00, aFrameItems=@0xbfffe5d0, aXBLBaseTag=0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:7352 #28 0x417122b5 in nsCSSFrameConstructor::ConstructFrame (this=0x8950480, aPresShell=0x89500b8, aPresContext=0x893edc0, aState=@0xbfffe500, aContent=0x8998720, aParentFrame=0x8995b50, aFrameItems=@0xbfffe5d0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:7213 #29 0x417153aa in nsCSSFrameConstructor::ContentAppended (this=0x8950480, aPresContext=0x893edc0, aContainer=0x8974f78, aNewIndexInContainer=0) at /home/chb/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp:8422 #30 0x416a269a in PresShell::ContentAppended (this=0x89500b8, aDocument=0x893c968, aContainer=0x8974f78, aNewIndexInContainer=0) at /home/chb/mozilla/layout/html/base/src/nsPresShell.cpp:5092 #31 0x4180b553 in nsDocument::ContentAppended (this=0x893c968, aContainer=0x8974f78, aNewIndexInContainer=0) at /home/chb/mozilla/content/base/src/nsDocument.cpp:2066 #32 0x4197b887 in nsHTMLDocument::ContentAppended (this=0x893c968, aContainer=0x8974f78, aNewIndexInContainer=0) at /home/chb/mozilla/content/html/document/src/nsHTMLDocument.cpp:1124 #33 0x41970e4c in HTMLContentSink::NotifyAppend (this=0x893d6d0, aContainer=0x8974f78, aStartIndex=0) at /home/chb/mozilla/content/html/document/src/nsHTMLContentSink.cpp:4025 #34 0x41969f6b in SinkContext::FlushTags (this=0x893db10, aNotify=1) at /home/chb/mozilla/content/html/document/src/nsHTMLContentSink.cpp:1793 #35 0x419710a0 in HTMLContentSink::BeginUpdate (this=0x893d6d0, aDocument=0x893c968, aUpdateType=7) at /home/chb/mozilla/content/html/document/src/nsHTMLContentSink.cpp:4114 #36 0x4180a951 in nsDocument::BeginUpdate (this=0x893c968, aUpdateType=7) at /home/chb/mozilla/content/base/src/nsDocument.cpp:1864 #37 0x416a55fe in PresShell::ProcessReflowCommands (this=0x89500b8, aInterruptible=1) at /home/chb/mozilla/layout/html/base/src/nsPresShell.cpp:6219 #38 0x416b0175 in ReflowEvent::HandleEvent (this=0x8996ab8) at /home/chb/mozilla/layout/html/base/src/nsPresShell.cpp:6080 #39 0x416a4fd8 in HandlePLEvent (aEvent=0x8996ab8) at /home/chb/mozilla/layout/html/base/src/nsPresShell.cpp:6096 #40 0x40b80260 in PL_HandleEvent (self=0x8996ab8) at /home/chb/mozilla/xpcom/threads/plevent.c:692 #41 0x40b80101 in PL_ProcessPendingEvents (self=0x8132b10) at /home/chb/mozilla/xpcom/threads/plevent.c:627 #42 0x40b8348a in nsEventQueueImpl::ProcessPendingEvents (this=0x8132ae8) at /home/chb/mozilla/xpcom/threads/nsEventQueue.cpp:391 ---Type <return> to continue, or q <return> to quit--- #43 0x41f50450 in event_processor_callback (source=0x8335a40, condition=G_IO_IN, data=0x8132ae8) at /home/chb/mozilla/widget/src/gtk2/nsAppShell.cpp:67 #44 0x40519329 in g_io_unix_dispatch (source=Variable "source" is not available. ) at giounix.c:161 #45 0x404f607e in g_main_context_dispatch (context=0x80b7e18) at gmain.c:1942 #46 0x404f85a9 in g_main_context_iterate (context=Variable "context" is not available. ) at gmain.c:2573 #47 0x404f9598 in g_main_loop_run (loop=Variable "loop" is not available. ) at gmain.c:2777 #48 0x4023e0cb in gtk_main () at gtkmain.c:1172 #49 0x41f50b4e in nsAppShell::Run (this=0x8188858) at /home/chb/mozilla/widget/src/gtk2/nsAppShell.cpp:142 #50 0x41e66817 in nsAppShellService::Run (this=0x8195af0) at /home/chb/mozilla/xpfe/appshell/src/nsAppShellService.cpp:488 #51 0x08064b79 in main1 (argc=4, argv=0xbfffee14, nativeApp=0x810c680) at /home/chb/mozilla/xpfe/bootstrap/nsAppRunner.cpp:1321 #52 0x080658b2 in main (argc=4, argv=0xbfffee14) at /home/chb/mozilla/xpfe/bootstrap/nsAppRunner.cpp:1799 the problem is that the Clone() would assign into mCurrentRequest, but before it returns, it sends the notifications - i.e. while mCurrentRequest is still null for the nsImageLoadingContent
Attached patch PatchSplinter Review
Assignee: general → bzbarsky
Status: NEW → ASSIGNED
Attachment #159222 - Flags: superreview?(dbaron)
Attachment #159222 - Flags: review?(pavlov)
Summary: ASSERTION: Unknown request: 'aRequest == mCurrentRequest || aRequest == mPendingRequest' → [FIX]ASSERTION: Unknown request: 'aRequest == mCurrentRequest || aRequest == mPendingRequest'
Target Milestone: --- → mozilla1.8alpha4
Attachment #159222 - Flags: superreview?(dbaron) → superreview+
Attachment #159222 - Flags: review?(pavlov) → review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Depends on: 323028
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: