Set the out param to the clone before notifying on the clone.  This will help with callers that expect the variable they are cloning into to be set by the time notifications happen.  Bug 259139, r=pavlov, sr=dbaron